# cng5

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  script.cli
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
notepad/: features.md  markdown.md  notepad.md  spec.md
specs/001-current-implementation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-current-implementation/checklists/: requirements.md
specs/001-current-implementation/contracts/: cli-commands.md  mqtt-protocol.md  web-api.md
src/: activity.rs  crypto.rs  gui.rs  main.rs  output.rs  plugin.rs  shell.rs  sysinfo.rs  web.rs
src/plugins/: activities.rs  device.rs  files.rs  gitrepo.rs  global.rs  mod.rs  music.rs  notepad.rs  output.rs  qr.rs  remote.rs  remote_output.rs  system.rs  weather.rs  wol.rs
src/web/: frontend.html
utils/: align.sh  commit.sh  daemon.sh
